--- a/Furniture_Websites/template-4/assets/css/page-section/_contact-us.scss
+++ b/Furniture_Websites/template-4/assets/css/page-section/_contact-us.scss
@@ -2,19 +2,19 @@
 =         13. Contact Us Pages Css          =
 ================================================*/
 .single-contact-info-item {
-     margin-top: 30px;
-     .icon {
-          float: left;
-          margin-right: 26px;
-          i {
-               line-height: 1;
-               font-size: 36px;
-               color: #000;
-          }
-     }
-     .iconbox-desc {
-          display: inline-block;
-     }
+  margin-top: 30px;
+  .icon {
+    float: left;
+    margin-right: 26px;
+    i {
+      line-height: 1;
+      font-size: 36px;
+      color: #000;
+    }
+  }
+  .iconbox-desc {
+    display: inline-block;
+  }
 }
 
 .contact-input {
@@ -39,27 +39,28 @@
 }
 
 .contact-inner {
-    margin: 0 0 20px;
-    & input , textarea {
-          border: 1px solid #e8e8e8;
-          height: 50px;
-          background-color: transparent;
-          padding: 2px 20px;
-          color: #777;
-          width: 100%;
-          &:focus {
-               border: 1px solid #262626;
-          }
+  margin: 0 0 20px;
+  & input,
+  textarea {
+    border: 1px solid #e8e8e8;
+    height: 50px;
+    background-color: transparent;
+    padding: 2px 20px;
+    color: #777;
+    width: 100%;
+    &:focus {
+      border: 1px solid #262626;
     }
-    &  textarea {
-        height: 150px;
-        padding: 15px;
-    }
-    & select {
-        color: #777;
-    }
+  }
+  & textarea {
+    height: 150px;
+    padding: 15px;
+  }
+  & select {
+    color: #777;
+  }
 }
 
 .googleMap-1 {
-    height: 800px;
+  height: 800px;
 }
